--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
-name = "ClockHelper"
+name = "clock_helper"
 version = "0.1.0"
 edition = "2024"
+authors = ["guilherme Silva Schultz <guilhermeSschultz.contato@gmail.com>"]
+description = "utility to facilitate clock management on STM32 microcontrollers."
+license = "MIT"
+repository = "https://github.com/RecursiveError/ClockHelper-Rust"
+keywords = ["clock", "STM32", "embedded"]
+categories = ["embedded", "hardware-support", "no-std"]
+
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"], optional = true }
